# sandbox

./: .gitmodules  CMakeLists.txt  readme.md
src/: main.c  math.h
